# watermetercalculator.quest

./: .env.temp  CLAUDE.md  package-lock.json  package.json  plan.md
agent/: pyproject.toml
agent/src/: __init__.py  agent.py
app/: apple-icon.tsx  icon.tsx  layout.tsx  loading.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/api/copilotkit/: route.ts
app/api/hume-token/: route.ts
app/articles/: layout.tsx  page.tsx
app/assistant/: layout.tsx  page.tsx
app/auth/[path]/: page.tsx
app/contact/: page.tsx
app/cookies/: page.tsx
app/metered-vs-unmetered/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
app/water-bill-calculator/: layout.tsx  page.tsx
app/water-usage-calculator/: layout.tsx  page.tsx
components/: CookieConsent.tsx  Disclaimer.tsx  Footer.tsx  HeroVoice.tsx  Navigation.tsx  WaterMeterCalculator.tsx  providers.tsx
scripts/: generate-favicons.mjs
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
