[project]
name = "water-meter-agent"
version = "1.0.0"
description = "AI agent for Water Meter Calculator UK"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[all]>=0.0.20",
    "google-generativeai>=0.8.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
